// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Article page analytics] should get the referralUrl from data if it's not passed in 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
        "article_topic_tags": Array [
          "football",
          "manchester-united",
          "chelsea",
          "arsenal",
          "rugby-union",
        ],
        "bylines": "Camilla Long",
        "edition_type": "past 6 days",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "headline": "Caribbean islands devastated by Hurricane Irma, the worst Atlantic storm on record",
        "label": "HURRICANE IRMA",
        "pageName": "france-defies-may-over-russia-37b27qd2s",
        "parent_site": "TIMES",
        "past_edition_date": "2015-03-13T18:54:58.000Z",
        "published_time": "2015-03-13T18:54:58.000Z",
        "referral_url": "from-data.com",
        "section": "news",
        "template": "mainstandard",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
]
`;

exports[`[Article page analytics] should get the referralUrl if its passed in 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
        "article_topic_tags": Array [
          "football",
          "manchester-united",
          "chelsea",
          "arsenal",
          "rugby-union",
        ],
        "bylines": "Camilla Long",
        "edition_type": "past 6 days",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "headline": "Caribbean islands devastated by Hurricane Irma, the worst Atlantic storm on record",
        "label": "HURRICANE IRMA",
        "pageName": "france-defies-may-over-russia-37b27qd2s",
        "parent_site": "TIMES",
        "past_edition_date": "2015-03-13T18:54:58.000Z",
        "published_time": "2015-03-13T18:54:58.000Z",
        "referral_url": "from-props.com",
        "section": "news",
        "template": "mainstandard",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
]
`;

exports[`[Article page analytics] should match snapshot when rendering an article page 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
        "article_topic_tags": Array [
          "football",
          "manchester-united",
          "chelsea",
          "arsenal",
          "rugby-union",
        ],
        "bylines": "Camilla Long",
        "edition_type": "past 6 days",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "headline": "Caribbean islands devastated by Hurricane Irma, the worst Atlantic storm on record",
        "label": "HURRICANE IRMA",
        "pageName": "france-defies-may-over-russia-37b27qd2s",
        "parent_site": "TIMES",
        "past_edition_date": "2015-03-13T18:54:58.000Z",
        "published_time": "2015-03-13T18:54:58.000Z",
        "referral_url": "referralUrl.com",
        "section": "news",
        "template": "mainstandard",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
]
`;
